--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,16 @@
 [tool.poetry]
-name = "reflection"
+name = "Agentic Desings"
 version = "0.1.0"
-description = ""
+description = "Simple Agentic Desing Examples"
 authors = ["jjovalle99 <jj.ovalle@uniandes.edu.co>"]
 readme = "README.md"
+
 
 [tool.poetry.dependencies]
 python = "~3.11"
 langchain = "^0.1.16"
 langchain-openai = "^0.1.3"
-langgraph = {extras = ["all"], version = "^0.0.37"}
+langgraph = "^0.0.37"
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.29.4"
