--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,12 @@ ipywidgets = "^8.1.2"
 python-dotenv = "^1.0.1"
 pygraphviz = "^1.12"
 
+
+[tool.poetry.group.llama3.dependencies]
+transformers = "^4.40.0"
+huggingface-hub = "^0.22.2"
+modal = "^0.62.98"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
