--- a/.env copy
+++ b/.env copy
@@ -2,3 +2,7 @@ OPENAI_API_KEY=<>
 LANGCHAIN_TRACING_V2=<>
 LANGCHAIN_PROJECT=<>
 LANGCHAIN_API_KEY=<>
+HF_TOKEN=<>
+SERP_API_KEY=<>
+TAVILY_API_KEY=<>
+GROQ_API_KEY=<>
