--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,12 @@ python = "~3.11"
 langchain = "^0.1.16"
 langchain-openai = "^0.1.3"
 langgraph = "^0.0.37"
+tavily-python = "^0.3.3"
+google-search-results = "^2.4.2"
+arxiv = "^2.1.0"
+pyppeteer = "^2.0.0"
+langchain-groq = "^0.1.2"
+langchainhub = "^0.1.15"
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.29.4"
